--- a/.github/workflows/shared-workflow.yaml
+++ b/.github/workflows/shared-workflow.yaml
@@ -33,10 +33,10 @@ jobs:
         with:
           args: trivy fs --debug --sast --scanners misconfig,vuln,secret --db-repository=registry.aquasec.com/trivy-db:2 --checks-bundle-repository=registry.aquasec.com/trivy-checks:1 --java-db-repository=registry.aquasec.com/trivy-java-db:1 .
 env:
-    AQUA_KEY: ${{ secrets.AQUA_KEY }}
-    AQUA_SECRET: ${{ secrets.AQUA_SECRET }}
-    GITHUB_TOKEN: ${{ secrets.TOKEN }}
+    AQUA_KEY: fcakfVkkWNaWLYvs5A5qfR
+    AQUA_SECRET: 41darGQlrtq324I0HnYbO6KhNB6FKDjTrsf
+    #GITHUB_TOKEN: ${{ secrets.TOKEN }}
     TRIVY_RUN_AS_PLUGIN: 'aqua'
-    ACTIONS_RUNTIME_TOKEN: ${{ secrets.TOKEN }}   
-    TRIVY_USERNAME: ${{ secrets.TRIVY_USERNAME }}
-    TRIVY_PASSWORD: ${{ secrets.TRIVY_PASSWORD }} 
+    #ACTIONS_RUNTIME_TOKEN: ${{ secrets.TOKEN }}   
+    TRIVY_USERNAME: teja.chittamuri@aquasec.com
+    TRIVY_PASSWORD: Jesus@saves2001
